tests/baselines/reference/computedPropertyNames27_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames27_ES5.ts(4,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames27_ES5.ts(4,7): error TS2466: 'super' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames27_ES5.ts (2 errors) ====
    class Base {
    }
    class C extends Base {
        [(super(), "prop")]() { }
        ~~~~~~~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
          ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
    }